# Bandwidth-HeroRust

./: .gitignore  Cargo.toml  Dockerfile  README.md  bandwidth-hero.service  docker-compose.yml
.github/workflows/: rust.yml
src/: compress.rs  logger.rs  main.rs  pick.rs  should_compress.rs
